--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   sizer: ^2.0.15
+  timelines: ^0.1.0
 
 dev_dependencies:
   flutter_test:
